@@ -1,5 +1,6 @@
 /*******************************************************************************
- * Copyright (c) 2019 Johannes Kepler University Linz
+ * Copyright (c) 2019, 2024 Johannes Kepler University Linz,
+ *                          Primetals Technology Austria GmbH
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
  * http://www.eclipse.org/legal/epl-2.0.
@@ -21,8 +22,8 @@ import org.eclipse.core.commands.ExecutionException;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.draw2d.IFigure;
 import org.eclipse.emf.common.util.EList;
-import org.eclipse.fordiac.ide.application.Messages;
 import org.eclipse.fordiac.ide.application.editparts.TargetInterfaceElementEditPart;
+import org.eclipse.fordiac.ide.application.widgets.OppositeSelectionDialog;
 import org.eclipse.fordiac.ide.gef.editparts.InterfaceEditPart;
 import org.eclipse.fordiac.ide.model.libraryElement.CFBInstance;
 import org.eclipse.fordiac.ide.model.libraryElement.Connection;
@@ -34,210 +35,14 @@ import org.eclipse.fordiac.ide.model.libraryElement.VarDeclaration;
 import org.eclipse.fordiac.ide.model.ui.editors.HandlerHelper;
 import org.eclipse.gef.EditPart;
 import org.eclipse.gef.GraphicalViewer;
-import org.eclipse.jface.dialogs.PopupDialog;
-import org.eclipse.jface.viewers.ArrayContentProvider;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.viewers.LabelProvider;
-import org.eclipse.jface.viewers.ListViewer;
 import org.eclipse.jface.viewers.StructuredSelection;
-import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.KeyEvent;
-import org.eclipse.swt.events.KeyListener;
-import org.eclipse.swt.graphics.Point;
-import org.eclipse.swt.graphics.Rectangle;
-import org.eclipse.swt.layout.GridData;
-import org.eclipse.swt.widgets.Composite;
-import org.eclipse.swt.widgets.Control;
 import org.eclipse.ui.IEditorPart;
 import org.eclipse.ui.ISources;
-import org.eclipse.ui.IWorkbench;
-import org.eclipse.ui.IWorkbenchPage;
-import org.eclipse.ui.IWorkbenchPart;
-import org.eclipse.ui.IWorkbenchWindow;
-import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.handlers.HandlerUtil;
-import org.eclipse.ui.handlers.IHandlerService;
 
 public abstract class FollowConnectionHandler extends AbstractHandler {
-
-	public static class OppositeSelectionDialog extends PopupDialog {
-
-		private final List<IInterfaceElement> opposites;
-		private final GraphicalViewer viewer;
-		private final IInterfaceElement originPin;
-		private final Point popupPosition;
-
-		public OppositeSelectionDialog(final List<IInterfaceElement> opposites, final GraphicalViewer viewer,
-				final IInterfaceElement originPin, final IFigure popupRefFigure) {
-			super(viewer.getControl().getShell(), INFOPOPUPRESIZE_SHELLSTYLE, true, false, false, false, false,
-					Messages.FBPaletteViewer_SelectConnectionEnd, null);
-			this.opposites = opposites;
-			this.viewer = viewer;
-			this.originPin = originPin;
-			this.popupPosition = getPopupPosition(viewer, popupRefFigure);
-		}
-
-		private static Point getPopupPosition(final GraphicalViewer viewer, final IFigure popupRefFigure) {
-			final org.eclipse.draw2d.geometry.Point pinLocation = popupRefFigure.getLocation();
-			pinLocation.y += popupRefFigure.getBounds().height * 1.5f;
-			popupRefFigure.translateToAbsolute(pinLocation);
-			return viewer.getControl().toDisplay(new Point(pinLocation.x, pinLocation.y));
-		}
-
-		@Override
-		protected void adjustBounds() {
-			super.adjustBounds();
-			final Rectangle rect = getShell().getBounds();
-			rect.x = popupPosition.x;
-			rect.y = popupPosition.y;
-			rect.width += 6;
-			rect.height += 6;
-			getShell().setBounds(rect);
-		}
-
-		@Override
-		protected Control createTitleMenuArea(final Composite parent) {
-			final Composite titleAreaComposite = (Composite) super.createTitleMenuArea(parent);
-
-			final GridData gdLabel = new GridData(GridData.FILL);
-			gdLabel.horizontalIndent = 5;
-			titleAreaComposite.setLayoutData(gdLabel);
-			return titleAreaComposite;
-		}
-
-		private String getPinName(final IInterfaceElement iElem) {
-			final StringBuilder sb = new StringBuilder();
-			if (iElem == null) {
-				return sb.toString();
-			}
-			if (isInSameNetwork(originPin, iElem)) {
-				sb.append(iElem.getFBNetworkElement().getName());
-			} else {
-				sb.append(iElem.getFBNetworkElement().getQualifiedName());
-				sb.delete(0, sb.indexOf(".") + 1); //$NON-NLS-1$
-			}
-			sb.append('.');
-			sb.append(iElem.getName());
-			return sb.toString();
-		}
-
-		private static boolean isInSameNetwork(final IInterfaceElement src, final IInterfaceElement dest) {
-			return src != null && dest != null
-					&& src.getFBNetworkElement().getFbNetwork().equals(dest.getFBNetworkElement().getFbNetwork());
-		}
-
-		@Override
-		protected Control createDialogArea(final Composite parent) {
-
-			final Composite dialogArea = (Composite) super.createDialogArea(parent);
-
-			final ListViewer listViewer = new ListViewer(dialogArea, SWT.SIMPLE);
-			listViewer.setContentProvider(new ArrayContentProvider());
-			listViewer.setLabelProvider(new LabelProvider() {
-
-				@Override
-				public String getText(final Object element) {
-					if (element instanceof final IInterfaceElement iElem) {
-						return getPinName(iElem);
-					}
-					return super.getText(element);
-				}
-			});
-			listViewer.setInput(opposites.toArray());
-
-			listViewer.addSelectionChangedListener(event -> selectInterfaceElement(viewer,
-					(IInterfaceElement) event.getStructuredSelection().getFirstElement()));
-
-			// on enter close the view
-			listViewer.getControl().addKeyListener(new FollowConnectionKeyListener(dialogArea));
-
-			final GridData gd = new GridData(GridData.CENTER);
-			gd.horizontalIndent = 3;
-			gd.verticalIndent = 2;
-			dialogArea.setLayoutData(gd);
-
-			listViewer.setSelection(new StructuredSelection(listViewer.getElementAt(0)), true);
-			return dialogArea;
-		}
-
-		private static IHandlerService getHandlerService() {
-			final IWorkbench wb = PlatformUI.getWorkbench();
-			final IWorkbenchWindow window = wb.getActiveWorkbenchWindow();
-			final IWorkbenchPage page = window.getActivePage();
-
-			final IWorkbenchPart active = page.getActivePart();
-			return active.getSite().getService(IHandlerService.class);
-
-		}
-
-		private static void invokeFollowRightConnectionHandler() {
-			try {
-				getHandlerService().executeCommand("org.eclipse.fordiac.ide.application.commands.followRightConnection", //$NON-NLS-1$
-						null);
-			} catch (final Exception e) {
-				throw new RuntimeException("followRightConnection.command not found"); //$NON-NLS-1$
-			}
-		}
-
-		private static void invokeFollowLeftConnectionHandler() {
-			try {
-				getHandlerService().executeCommand("org.eclipse.fordiac.ide.application.commands.followLeftConnection", //$NON-NLS-1$
-						null);
-			} catch (final Exception e) {
-				throw new RuntimeException("followLeftConnection.command not found"); //$NON-NLS-1$
-			}
-		}
-
-		private class FollowConnectionKeyListener implements KeyListener {
-			private final Composite dialogArea;
-
-			public FollowConnectionKeyListener(final Composite dialogArea) {
-				this.dialogArea = dialogArea;
-			}
-
-			@Override
-			public void keyPressed(final KeyEvent e) {
-				if (e.character == SWT.CR) {
-					dialogArea.getShell().close();
-				}
-				if (opposites.get(0).getInputConnections().isEmpty()) {
-					handleRight(e);
-				} else {
-					handleLeft(e);
-				}
-
-			}
-
-			@Override
-			public void keyReleased(final KeyEvent e) {
-				// do nothing here
-			}
-
-			private void handleRight(final KeyEvent e) {
-				if ((e.stateMask == SWT.CTRL) && (e.keyCode == SWT.ARROW_LEFT)) {
-					selectInterfaceElement(viewer, originPin);
-					dialogArea.getShell().close();
-				}
-				if (e.stateMask == SWT.CTRL && e.keyCode == SWT.ARROW_RIGHT) {
-					invokeFollowRightConnectionHandler();
-					dialogArea.getShell().close();
-				}
-			}
-
-			private void handleLeft(final KeyEvent e) {
-				if ((e.stateMask == SWT.CTRL) && (e.keyCode == SWT.ARROW_RIGHT)) {
-					selectInterfaceElement(viewer, originPin);
-					dialogArea.getShell().close();
-				}
-				if (e.stateMask == SWT.CTRL && e.keyCode == SWT.ARROW_LEFT) {
-					invokeFollowLeftConnectionHandler();
-					dialogArea.getShell().close();
-				}
-			}
-		}
-
-	}
 
 	@Override
 	public Object execute(final ExecutionEvent event) throws ExecutionException {
@@ -289,7 +94,7 @@ public abstract class FollowConnectionHandler extends AbstractHandler {
 				.toList();
 	}
 
-	private static List<IInterfaceElement> resolveTargetPins(final List<IInterfaceElement> opposites,
+	protected static List<IInterfaceElement> resolveTargetPins(final List<IInterfaceElement> opposites,
 			final GraphicalViewer viewer) {
 		final List<IInterfaceElement> resolvedOpposites = new ArrayList<>();
 		for (final IInterfaceElement element : opposites) {
@@ -328,14 +133,13 @@ public abstract class FollowConnectionHandler extends AbstractHandler {
 	}
 
 	private static void showOppositeSelectionDialog(final List<IInterfaceElement> opposites, final ExecutionEvent event,
-			final GraphicalViewer viewer, final IInterfaceElement originPin) {
-
-		selectInterfaceElement(viewer, opposites.get(0));
+			final GraphicalViewer viewer, final IInterfaceElement originPin, final IEditorPart editor) {
+		selectInterfaceElement(opposites.getFirst(), editor);
 		viewer.flush();
 		final StructuredSelection selection = (StructuredSelection) HandlerUtil.getCurrentSelection(event);
 		final IFigure figure = ((InterfaceEditPart) ((IStructuredSelection) selection).getFirstElement()).getFigure();
-
-		final OppositeSelectionDialog dialog = new OppositeSelectionDialog(opposites, viewer, originPin, figure);
+		final OppositeSelectionDialog dialog = new OppositeSelectionDialog(opposites, originPin, viewer.getControl(),
+				figure, editor);
 		dialog.open();
 	}
 
@@ -371,13 +175,12 @@ public abstract class FollowConnectionHandler extends AbstractHandler {
 	}
 
 	protected static void selectOpposites(final ExecutionEvent event, final GraphicalViewer viewer,
-			final IInterfaceElement originPin, final List<IInterfaceElement> opposites) {
-		final List<IInterfaceElement> resolvedOpposites = resolveTargetPins(opposites, viewer);
-		if (!resolvedOpposites.isEmpty()) {
-			if (resolvedOpposites.size() == 1) {
-				selectInterfaceElement(viewer, resolvedOpposites.get(0));
+			final IInterfaceElement originPin, final List<IInterfaceElement> opposites, final IEditorPart editor) {
+		if (!opposites.isEmpty()) {
+			if (opposites.size() == 1) {
+				selectInterfaceElement(opposites.getFirst(), editor);
 			} else {
-				showOppositeSelectionDialog(resolvedOpposites, event, viewer, originPin);
+				showOppositeSelectionDialog(opposites, event, viewer, originPin, editor);
 			}
 		}
 	}
@@ -389,7 +192,7 @@ public abstract class FollowConnectionHandler extends AbstractHandler {
 		final var visibleDestinations = destination.stream().filter(IInterfaceElement::isVisible).toList();
 
 		if (sourceIndex == -1) {
-			return visibleDestinations.get(0);
+			return visibleDestinations.getFirst();
 		}
 
 		if ((visibleDestinations.size() - 1) < sourceIndex) {
@@ -419,8 +222,9 @@ public abstract class FollowConnectionHandler extends AbstractHandler {
 		return pin.getFBNetworkElement() instanceof final SubApp subapp && subapp.isUnfolded();
 	}
 
-	protected static void selectInterfaceElement(final GraphicalViewer viewer, final IInterfaceElement element) {
-		if (!HandlerHelper.selectElement(element, viewer)) {
+	public static void selectInterfaceElement(final IInterfaceElement element, final IEditorPart editor) {
+		final GraphicalViewer currentViewer = HandlerHelper.getViewer(editor);
+		if (!HandlerHelper.selectElement(element, currentViewer)) {
 			// we have a subappcrossing element
 			TargetInterfaceElementEditPart.openInBreadCrumb(element);
 		}
